--- a/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Web.config
+++ b/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Web.config
@@ -5,35 +5,47 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-    <add name="ShifterManConnectionString" connectionString="Data Source=KAKIFISH;Initial Catalog=ShifterMan;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
+      providerName="System.Data.SqlClient" />
+    <add name="ShifterManConnectionString" connectionString="Data Source=KAKIFISH;Initial Catalog=ShifterMan;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ShifterManDB" connectionString="Data Source=tcp:85.65.63.213,55555;Initial Catalog=ShifterMan;Persist Security Info=True;User ID=sa;Password=ShifterMan"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
+      <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
     </authentication>
     <membership>
       <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
     <profile>
       <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
     <roleManager enabled="false">
       <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
+        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
       </providers>
     </roleManager>
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
+  <appSettings>
+    <add key="microsoft.visualstudio.teamsystems.aspnetdevserver:/ShifterMan" value="5691;True;4356;1;-8588361643741283908" />
+    <add key="microsoft.visualstudio.teamsystems.backupinfo" value="2;web.config.backup" />
+  </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+    </assemblyBinding>
+  </runtime>
 </configuration>
