--- a/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Web.config
+++ b/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Web.config
@@ -11,7 +11,7 @@
   </connectionStrings>
   <system.web>
     <customErrors mode="Off"/>
-    <compilation debug="true" targetFramework="4.0" urlLinePragmas="true"/>
+    <compilation debug="true" targetFramework="4.0"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
     </authentication>
